# MobileCppMemoryTest

./: CMakeLists.txt  README.md  build.sh  run_cmake_ios.sh  run_djinni.sh
android_project/MobileCppMemoryTestAndroid/app/: build.gradle
android_project/MobileCppMemoryTestAndroid/app/src/androidTest/java/com/company/mobilecppmemorytestandroid/: ExampleInstrumentedTest.java
android_project/MobileCppMemoryTestAndroid/app/src/main/: AndroidManifest.xml
android_project/MobileCppMemoryTestAndroid/app/src/main/cpp/: CMakeLists.txt
android_project/MobileCppMemoryTestAndroid/app/src/main/java/com/company/mobilecppmemorytestandroid/: LoggerImpl.java  MainActivity.java  NetworkRequestImpl.java
android_project/MobileCppMemoryTestAndroid/app/src/main/res/layout/: activity_main.xml
android_project/MobileCppMemoryTestAndroid/app/src/main/res/values/: strings.xml
android_project/MobileCppMemoryTestAndroid/app/src/test/java/com/company/mobilecppmemorytestandroid/: ExampleUnitTest.java
cmake/toolchains/: iOS.cmake
djinni/: MobileCppMemoryTest.djinni
djinni/father/: father.djinni
djinni/logger/: logger.djinni
djinni/network/: network.djinni
djinni/son/: son.djinni
generated-src/cpp/: FatherCallback.hpp  Logger.hpp  ModelFather.hpp  ModelSon.hpp  NetworkRequest.hpp  NetworkRequestCallback.hpp  NetworkRequestResponse.hpp  SonCallback.hpp
generated-src/java/com/company/mobilecppmemorytest/: FatherCallback.java  Logger.java  ModelFather.java  ModelSon.java  NetworkRequest.java  NetworkRequestCallback.java  NetworkRequestResponse.java  SonCallback.java
generated-src/jni/: NativeFatherCallback.cpp  NativeFatherCallback.hpp  NativeLogger.cpp  NativeLogger.hpp  NativeModelFather.cpp  NativeModelFather.hpp  NativeModelSon.cpp  NativeModelSon.hpp  NativeNetworkRequest.cpp  NativeNetworkRequest.hpp  NativeNetworkRequestCallback.cpp  NativeNetworkRequestCallback.hpp  NativeNetworkRequestResponse.cpp  NativeNetworkRequestResponse.hpp  NativeSonCallback.cpp  NativeSonCallback.hpp
generated-src/objc/: MCMTFatherCallback+Private.h  MCMTFatherCallback+Private.mm  MCMTFatherCallback.h  MCMTLogger+Private.h  MCMTLogger+Private.mm  MCMTLogger.h  MCMTModelFather+Private.h  MCMTModelFather+Private.mm  MCMTModelFather.h  MCMTModelSon+Private.h  MCMTModelSon+Private.mm  MCMTModelSon.h  MCMTNetworkRequest+Private.h  MCMTNetworkRequest+Private.mm  MCMTNetworkRequest.h  MCMTNetworkRequestCallback+Private.h  MCMTNetworkRequestCallback+Private.mm  MCMTNetworkRequestCallback.h  MCMTNetworkRequestResponse+Private.h  MCMTNetworkRequestResponse+Private.mm  MCMTNetworkRequestResponse.h  MCMTNetworkRequestResponse.mm  MCMTSonCallback+Private.h  MCMTSonCallback+Private.mm  MCMTSonCallback.h
ios_project/MobileCppMemoryTestiOS/: CMakeLists.txt
ios_project/MobileCppMemoryTestiOS/MobileCppMemoryTestiOS/: AppDelegate.swift  MCMTFatherCallbackWrapper.swift  ViewController.swift
ios_project/MobileCppMemoryTestiOS/MobileCppMemoryTestiOS.xcodeproj/: project.pbxproj
ios_project/MobileCppMemoryTestiOS/MobileCppMemoryTestiOS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios_project/MobileCppMemoryTestiOS/MobileCppMemoryTestiOS.xcodeproj/project.xcworkspace/xcuserdata/bruno.coelho.xcuserdatad/: UserInterfaceState.xcuserstate
ios_project/MobileCppMemoryTestiOS/MobileCppMemoryTestiOS.xcodeproj/xcuserdata/bruno.coelho.xcuserdatad/xcschemes/: MobileCppMemoryTestiOS.xcscheme  xcschememanagement.plist
ios_project/MobileCppMemoryTestiOS/MobileCppMemoryTestiOS/Logger/: LoggerImpl.swift
ios_project/MobileCppMemoryTestiOS/MobileCppMemoryTestiOS/Networking/: MobileCppMemoryTestiOS-Bridging-Header.h  NetworkRequestImpl.swift
src/main/: ModelFatherImpl.cpp  ModelFatherImpl.hpp  ModelSonImpl.cpp  ModelSonImpl.hpp  SonCallbackWrapper.hpp
src/main/cpp/: ModelFatherImpl.cpp  ModelSonImpl.cpp  SonCallbackWrapper.cpp
src/main/cpp/networking/: NetworkRequestCallbackWrapper.cpp  NetworkRequestCallbackWrapper.hpp
